src/objects/Controlled_Document__c.object
<CustomObject>
    <fields>
        <fullName>Stage__c</fullName>
        <inlineHelpText>An indication of where in the life-cycle of a Controlled Document this record resides. This field is manually updated by users with edit access to the Controlled Document record.</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Closure</fullName>
                </value>
                <value>
                    <fullName>Awaiting Signature</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Concurrence</fullName>
                </value>
                <value>
                    <fullName>Directives Clearance</fullName>
                </value>
                <value>
                    <fullName>Drafting</fullName>
                </value>
                <value>
                    <fullName>External Review</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Initiated</fullName>
                    <default>true</default>
                    <label>Initiated</label>
                </value>
                <value>
                    <fullName>Program Review</fullName>
                </value>
                <value>
                    <fullName>Revise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Division__c</fullName>
        <inlineHelpText>The sub-division of the Originating Service/Staff Office selected.</inlineHelpText>
        <label>Office / Portfolio</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Originating_Office__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AC - Office of the Chief of Staff</fullName>
                </value>
                <value>
                    <fullName>AD - Office of the Deputy Administrator</fullName>
                </value>
                <value>
                    <fullName>AKA - EEO Program Division</fullName>
                </value>
                <value>
                    <fullName>AKB - Civil Rights Program Division</fullName>
                </value>
                <value>
                    <fullName>BB - Office of Budget</fullName>
                </value>
                <value>
                    <fullName>BG - Office of Financial Management</fullName>
                </value>
                <value>
                    <fullName>BI - Office of Analytics, Performance, and Improvement</fullName>
                </value>
                <value>
                    <fullName>BR - Office of Regional Financial Services</fullName>
                </value>
                <value>
                    <fullName>CR - Office of Human Resources Services</fullName>
                </value>
                <value>
                    <fullName>CS - Office of Human Capital Strategy</fullName>
                </value>
                <value>
                    <fullName>D1A - Operations and Plans Division</fullName>
                </value>
                <value>
                    <fullName>D1E - Eastern Regions Division</fullName>
                </value>
                <value>
                    <fullName>D1H - Physical Security Division</fullName>
                </value>
                <value>
                    <fullName>D1P - Policy and Performance Division</fullName>
                </value>
                <value>
                    <fullName>D1S - Personnel Security Division</fullName>
                </value>
                <value>
                    <fullName>D1W - Western Regions Division</fullName>
                </value>
                <value>
                    <fullName>DT - Strategic Programs Office</fullName>
                </value>
                <value>
                    <fullName>EC - Customer Outreach</fullName>
                </value>
                <value>
                    <fullName>EP - Supervisory Policy &amp; Program Advisor</fullName>
                </value>
                <value>
                    <fullName>ES - Office of Regional Programs</fullName>
                </value>
                <value>
                    <fullName>H1A - Office of Internal Acquisition</fullName>
                </value>
                <value>
                    <fullName>H1B - Office of Workplace Management and Services</fullName>
                </value>
                <value>
                    <fullName>H1C - Office of Travel and Charge Card Services</fullName>
                </value>
                <value>
                    <fullName>H1E - Office of Executive Secretariat and Audit Management</fullName>
                </value>
                <value>
                    <fullName>H1F - Office of Accountability and Transparency</fullName>
                </value>
                <value>
                    <fullName>IC - Office of Corporate IT Services</fullName>
                </value>
                <value>
                    <fullName>ID - Office of the Deputy CIO</fullName>
                </value>
                <value>
                    <fullName>IP - Office of Public Buildings IT Services</fullName>
                </value>
                <value>
                    <fullName>IQ - Office of Acquisition IT Services</fullName>
                </value>
                <value>
                    <fullName>IS - Office of Chief Information Security Officer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <inlineHelpText>The subject of this Controlled Document.</inlineHelpText>
        <label>Subject</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>.Gov</fullName>
                </value>
                <value>
                    <fullName>Accommodations</fullName>
                </value>
                <value>
                    <fullName>Accomplishments</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>ADR</fullName>
                </value>
                <value>
                    <fullName>Advisory</fullName>
                </value>
                <value>
                    <fullName>Affidavit</fullName>
                </value>
                <value>
                    <fullName>AFGE</fullName>
                </value>
                <value>
                    <fullName>AFM</fullName>
                </value>
                <value>
                    <fullName>AFV</fullName>
                </value>
                <value>
                    <fullName>Agreement</fullName>
                </value>
                <value>
                    <fullName>Air Carriers</fullName>
                </value>
                <value>
                    <fullName>Aircraft</fullName>
                </value>
                <value>
                    <fullName>ALDP</fullName>
                </value>
                <value>
                    <fullName>Allegations</fullName>
                </value>
                <value>
                    <fullName>Allowance</fullName>
                </value>
                <value>
                    <fullName>Ammendments</fullName>
                </value>
                <value>
                    <fullName>Appeal</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Appointment</fullName>
                </value>
                <value>
                    <fullName>Apportionment</fullName>
                </value>
                <value>
                    <fullName>Appreciation</fullName>
                </value>
                <value>
                    <fullName>Appropriations</fullName>
                </value>
                <value>
                    <fullName>Archives</fullName>
                </value>
                <value>
                    <fullName>ARR Act</fullName>
                </value>
                <value>
                    <fullName>ASF</fullName>
                </value>
                <value>
                    <fullName>Assessment</fullName>
                </value>
                <value>
                    <fullName>Assignment</fullName>
                </value>
                <value>
                    <fullName>Auction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <inlineHelpText>A text field that is used to provide any pertinent information not otherwise contained in a separate field on this Controlled Document record.</inlineHelpText>
        <label>Summary</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TEST__c</fullName>
        <formula>ExecSec_Days_Overdue__c &gt; 0  &amp;&amp; ISPICKVAL (GSA_Action_Required__c,   &apos;Signature/Approval of the Administrator&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TEST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title_Formula__c</fullName>
        <formula>IF( Congressional__c = TRUE, LEFT(TEXT( Originating_Office__c ),(FIND(&quot; &quot;,TEXT( Originating_Office__c ))))+&quot; - &quot;+ Name + &quot; - &quot; +  Final_Signatory__r.LastName  + &quot; - &quot; + TEXT(Stage__c) + &quot; - &quot; + &quot;C&quot;, LEFT(TEXT( Originating_Office__c ),(FIND(&quot; &quot;,TEXT( Originating_Office__c ))))+&quot; - &quot;+ Name + &quot; - &quot; + Final_Signatory__r.LastName + &quot; - &quot; + TEXT(Stage__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Title is formed by combining the Document ID, the Originating Service/Staff Office code, the last name of the Final Signatory, and a &quot;C&quot; if it is a Congressional-related record.</inlineHelpText>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <description>General topic such as year and type of spend plans.</description>
        <inlineHelpText>General topic such as year and type of spend plans.</inlineHelpText>
        <label>Topic</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalCtrls_Admin_Congressionals__c</fullName>
        <formula>IF (( Congressional__c = TRUE &amp;&amp; ISPICKVAL(GSA_Action_Required__c, &apos;Signature/Approval of the Administrator&apos;)), 1, 0)</formula>
        <label>TotalCtrls Admin +Congressionals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_A_suite_Controls_Closed__c</fullName>
        <formula>IF((  ISPICKVAL( GSA_Action_Required__c , &quot;Signature/Approval of the Administrator&quot;) ), 1, 0)</formula>
        <label>Total A-suite Controls Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Days_Process__c</fullName>
        <label>Total Days Process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_External1__c</fullName>
        <formula>CASE(Internal_External__c, &quot;External&quot;, 1, &quot;Internal&quot;, 0, 0)</formula>
        <label>Total (External)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Internal1__c</fullName>
        <formula>CASE(Internal_External__c, &quot;Internal&quot;, 1, &quot;External&quot;, 0, 0)</formula>
        <label>Total (Internal)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Internal__c</fullName>
        <description>Used for reporting</description>
        <formula>CASE(Internal_External__c, &quot;Internal&quot;, &apos;Total (Internal)&apos;, &quot;External&quot;, &apos;Total (External)&apos;, &quot;&quot;)</formula>
        <label>Total (Internal)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Num_Controls_Less_than_Full_5Days__c</fullName>
        <formula>IF(Full_5day_Review__c = FALSE, 1, 0)</formula>
        <label>Total Num Controls(Less than Full 5Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_Controls_25__c</fullName>
        <formula>IF(( ExecStart_To_ReqDueDate__c &lt; 25), 1, 0)</formula>
        <label>Total Number Controls &lt;25</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_Controls_Full_5_Days__c</fullName>
        <formula>IF( Full_5day_Review__c = TRUE, 1, 0)</formula>
        <label>Total Number Controls(Full 5 Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Overdue__c</fullName>
        <formula>IF( ExecSec_Days_Overdue__c &gt; 1, 1, 0)</formula>
        <label>Total Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ttl_A_suite_cntrls_w_20_days_to_process__c</fullName>
        <formula>IF(Total_Days_Process__c &lt; 20, 1, 0)</formula>
        <label>Ttl A-suite cntrls w &lt;20 days to process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ttl_A_suite_cntrls_w_25_days_to_process__c</fullName>
        <formula>IF( ExecStart_To_ReqDueDate__c &gt; 24, 1, 0)</formula>
        <label>Ttl A-suite cntrls w 25 days to process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ttl_A_suite_grtr_20_days_to_process__c</fullName>
        <formula>IF(Total_Days_Process__c &gt; 20, 1, 0)</formula>
        <label>Num Congressionals with&gt;20 days to clear</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ttl_Controls_Admin_Congressionals__c</fullName>
        <description>Total Controls (Administrator + Congressionals)</description>
        <formula>IF (( Congressional__c = TRUE  &amp;&amp;   ISPICKVAL(GSA_Action_Required__c, &apos;Signature/Approval of the Administrator&apos;)), 1, 0)</formula>
        <label>Ttl Controls (Admin + Congressionals)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>White_House_Correspondence__c</fullName>
        <formula>IF( Days_Open__c &lt; 22, &quot;Completed in 21 Days&quot;, &quot;Completed in More Than 21 Days&quot; )</formula>
        <label>White House Correspondence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1st_6_months__c</fullName>
        <formula>IF( ((MONTH( ExecSec_End_Date__c )  &lt;= 3)  || (MONTH( ExecSec_End_Date__c )   &gt;= 10)), 1, 0)</formula>
        <label>1st 6 months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X20_or_Fewer_Days_Adm_EXTERNAL__c</fullName>
        <formula>IF(( X20_or_Fewer_Days_Administrator__c = 1  &amp;&amp;  Total_External1__c = 1), 1, 0)</formula>
        <label>20 or Fewer Days Adm EXTERNAL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X20_or_Fewer_Days_Adm_INTERNAL__c</fullName>
        <formula>IF( (Days_Open__c &lt;21  &amp;&amp;  GSA_AR_Signature_Approval_of_the_Admin__c = 1  &amp;&amp;  Total_Internal1__c = 1), 1, 0)</formula>
        <label>20 or Fewer Days Adm INTERNAL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X20_or_Fewer_Days_Administrator__c</fullName>
        <formula>IF(( Days_Open__c &lt; 21  &amp;&amp;  GSA_AR_Signature_Approval_of_the_Admin__c = 1), 1, 0)</formula>
        <label>20 or Fewer Days (Administrator)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X21_to_25_Days_Admin_INTERNAL__c</fullName>
        <formula>IF(( X21_to_25_Days_Administrator__c = 1  &amp;&amp;  Total_Internal1__c = 1), 1, 0)</formula>
        <label>21 to 25 Days Admin INTERNAL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X21_to_25_Days_Administrator_EXTERNAL__c</fullName>
        <formula>IF(( X21_to_25_Days_Administrator__c = 1  &amp;&amp;  Total_External1__c =1), 1, 0)</formula>
        <label>21 to 25 Days (Administrator) EXTERNAL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X21_to_25_Days_Administrator__c</fullName>
        <formula>IF((( Days_Open__c &gt; 20  &amp;&amp; Days_Open__c &lt; 26)  &amp;&amp;  GSA_AR_Signature_Approval_of_the_Admin__c = 1), 1, 0)</formula>
        <label>21 to 25 Days (Administrator)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2nd_6_months__c</fullName>
        <formula>IF( ((MONTH( ExecSec_End_Date__c )  &gt;= 4) || (MONTH( ExecSec_End_Date__c )  &lt;= 9)), 1, 0)</formula>
        <label>2nd 6 months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Controlled Document</label>
    <listViews>
        <fullName>AK_Office_of_Civil_Rights</fullName>
        <columns>NAME</columns>
        <columns>Title_Formula__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Originating_Office__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Originating_Office__c</field>
            <operation>equals</operation>
            <value>AK - Office of Civil Rights</value>
        </filters>
        <label>AK - Office of Civil Rights</label>
    </listViews>
    <listViews>
        <fullName>A_Office_of_the_Administrator</fullName>
        <columns>NAME</columns>
        <columns>Title_Formula__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Originating_Office__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Originating_Office__c</field>
            <operation>equals</operation>
            <value>A - Office of the Administrator</value>
        </filters>
        <label>A - Office of the Administrator</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title_Formula__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Originating_Office__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>B_Office_of_Chief_Financial_Officer</fullName>
        <columns>NAME</columns>
        <columns>Title_Formula__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Originating_Office__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Originating_Office__c</field>
            <operation>equals</operation>
            <value>B - Office of the Chief Financial Officer</value>
        </filters>
        <label>B - Office of Chief Financial Officer</label>
    </listViews>
    <listViews>
        <fullName>C_Office_of_Human_Resource_Management</fullName>
        <columns>NAME</columns>
        <columns>Title_Formula__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Originating_Office__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Originating_Office__c</field>
            <operation>equals</operation>
            <value>C - Office of Human Resource Management</value>
        </filters>
        <label>C - Office of Human Resource Management</label>
    </listViews>
    <listViews>
        <fullName>D_Office_of_Mission_Assurance</fullName>
        <columns>NAME</columns>
        <columns>Title_Formula__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Originating_Office__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Originating_Office__c</field>
            <operation>equals</operation>
            <value>D - Office of Mission Assurance</value>
        </filters>
        <label>D - Office of Mission Assurance</label>
    </listViews>
    <listViews>
        <fullName>Documents_Due_Within_One_Week</fullName>
        <columns>NAME</columns>
        <columns>Title_Formula__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Originating_Office__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Due_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>NEXT_N_DAYS:7</value>
        </filters>
        <filters>
            <field>Due_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Documents Due Within One Week</label>
    </listViews>
    <listViews>
        <fullName>Documents_Due_Within_Two_Weeks</fullName>
        <columns>NAME</columns>
        <columns>Title_Formula__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Originating_Office__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Due_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>NEXT_N_DAYS:14</value>
        </filters>
        <filters>
            <field>Due_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Documents Due Within Two Weeks</label>
    </listViews>
    <listViews>
        <fullName>E_Office_of_Small_Business_Utilization</fullName>
        <columns>NAME</columns>
        <columns>Title_Formula__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Originating_Office__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Originating_Office__c</field>
            <operation>equals</operation>
            <value>E - Office of Small Business Utilization</value>
        </filters>
        <label>E - Office of Small Business Utilization</label>
    </listViews>
    <listViews>
        <fullName>G_Civilian_Board_of_Contract_Appeals</fullName>
        <columns>NAME</columns>
        <columns>Title_Formula__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Originating_Office__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Originating_Office__c</field>
            <operation>equals</operation>
            <value>G - Civilan Board of Contract Appeals</value>
        </filters>
        <label>G - Civilian Board of Contract Appeals</label>
    </listViews>
    <listViews>
        <fullName>H_Office_of_Administrative_Services</fullName>
        <columns>NAME</columns>
        <columns>Title_Formula__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Originating_Office__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Originating_Office__c</field>
            <operation>equals</operation>
            <value>H - Office of Administrative Services</value>
        </filters>
        <label>H - Office of Administrative Services</label>
    </listViews>
    <listViews>
        <fullName>I_Office_of_the_GSA_IT</fullName>
        <columns>NAME</columns>
        <columns>Title_Formula__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Originating_Office__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Originating_Office__c</field>
            <operation>equals</operation>
            <value>I - Office of the GSA IT</value>
        </filters>
        <label>I - Office of the GSA IT</label>
    </listViews>
    <listViews>
        <fullName>J_Office_of_the_Inspector_General</fullName>
        <columns>NAME</columns>
        <columns>Title_Formula__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Originating_Office__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Originating_Office__c</field>
            <operation>equals</operation>
            <value>J - Office of the Inspector General</value>
        </filters>
        <label>J - Office of the Inspector General</label>
    </listViews>
    <listViews>
        <fullName>L_Office_of_the_General_Counsel</fullName>
        <columns>NAME</columns>
        <columns>Title_Formula__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Originating_Office__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Originating_Office__c</field>
            <operation>equals</operation>
            <value>L - Office of the General Counsel</value>
        </filters>
        <label>L - Office of the General Counsel</label>
    </listViews>
    <listViews>
        <fullName>M_Office_of_Governmentwide_Policy</fullName>
        <columns>NAME</columns>
        <columns>Title_Formula__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Originating_Office__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Originating_Office__c</field>
            <operation>equals</operation>
            <value>M - Office of Governmentwide Policy</value>
        </filters>
        <label>M - Office of Governmentwide Policy</label>
    </listViews>
    <nameField>
        <displayFormat>CC{000000}</displayFormat>
        <label>Document ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Controlled Documents</pluralLabel>
    <recordTypes>
        <fullName>Contract_Award_Notification</fullName>
        <active>true</active>
        <description>Record Type for Contract Awards Monitoring</description>
        <label>Contract Award Notification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Controlled_Document</fullName>
        <active>true</active>
        <description>Record Type for Controlled Documents</description>
        <label>Controlled Document</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Apex_Managed_Sharing__c</fullName>
        <label>Apex Managed Sharing</label>
    </sharingReasons>
    <validationRules>
        <fullName>Contract_Date_Cannot_be_future_date</fullName>
        <active>true</active>
        <description>Contract date cannot be a future date</description>
        <errorConditionFormula>IF( 
 $CustomMetadata.CDT_Setting__mdt.Enhancement_Release.Allow_Validation__c,
 Contract_Date__c  &gt;  TODAY(),
 False)</errorConditionFormula>
        <errorDisplayField>Contract_Date__c</errorDisplayField>
        <errorMessage>Contract date must be today or prior to current date but it cannot be in the future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Delivery1_Date_after_Requested_Due_Date</fullName>
        <active>true</active>
        <description>Requested Due Date - External Delivery 1 must be must be after Requested Due Date Signer.</description>
        <errorConditionFormula>IF( $CustomMetadata.CDT_Setting__mdt.Enhancement_Release.Allow_Validation__c,

 Requested_Due_Date_External_Delivery_1__c  &lt;=  Due_Date__c,

 False)</errorConditionFormula>
        <errorDisplayField>Requested_Due_Date_External_Delivery_1__c</errorDisplayField>
        <errorMessage>Requested Due Date - External Delivery 1 must be after Requested Due Date Signer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Does_Directive_Due_Dates_have_Value</fullName>
        <active>true</active>
        <description>External Delivery 1 and External Delivery 2 cannot be used if Directives Coordination or Directives Clearance are populated--and vice versa.</description>
        <errorConditionFormula>IF( 
 $CustomMetadata.CDT_Setting__mdt.Enhancement_Release.Allow_Validation__c,

 (!(isnull(Requested_Due_Date_External_Delivery_1__c)) ||
 !(isnull(Requested_Due_Date_External_Delivery_2__c))) &amp;&amp;
 (!(isnull( Directives_Coordination_Due_Date__c )) ||
 !(isnull(Directives_Clearance_Due_Date__c))),

 False)</errorConditionFormula>
        <errorMessage>Enter Dates for either Requested Due Date External Delivery 1 &amp; 2 or for Directive Coordination/Clearance Due Dates.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ES_Due_Date_later_than_ES_Start_Date</fullName>
        <active>true</active>
        <description>ExecSec Due Date is not before ExecSec Start Date</description>
        <errorConditionFormula>IF( 
 $CustomMetadata.CDT_Setting__mdt.Enhancement_Release.Allow_Validation__c,

 ExecSec_Due_Date__c &lt;  ExecSec_Start_Date__c,

 False)</errorConditionFormula>
        <errorDisplayField>ExecSec_Due_Date__c</errorDisplayField>
        <errorMessage>The ExecSec Due Date must be later than the ExecSec Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ExecSec_fields_must_both_be_complete</fullName>
        <active>true</active>
        <description>IF Exec Sec Start Date = has value, then require Exec Sec Assignee field, &amp; vice versa</description>
        <errorConditionFormula>IF( 
 $CustomMetadata.CDT_Setting__mdt.Enhancement_Release.Allow_Validation__c,

 ((  ISBLANK( ExecSec_Start_Date__c ))   &amp;&amp; ( NOT( ISBLANK( Assignee__c ) ))) || ((  ISBLANK( Assignee__c ))   &amp;&amp; ( NOT( ISBLANK( ExecSec_Start_Date__c  ) ))),

 False)</errorConditionFormula>
        <errorMessage>If either ExecSec Start Date or ExecSec Assignee are entered, then both fields must be entered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>External_Delivery2_After_Delivery1_Date</fullName>
        <active>true</active>
        <description>Requested Due Date - External Delivery 2 must be after the Requested Due Date External Delivery 1.</description>
        <errorConditionFormula>IF( 
 $CustomMetadata.CDT_Setting__mdt.Enhancement_Release.Allow_Validation__c,

if(!ISNULL(Requested_Due_Date_External_Delivery_1__c),Requested_Due_Date_External_Delivery_2__c &lt;=  Requested_Due_Date_External_Delivery_1__c, if(!ISNULL(Requested_Due_Date_External_Delivery_2__c),true,false)),

False)</errorConditionFormula>
        <errorDisplayField>Requested_Due_Date_External_Delivery_2__c</errorDisplayField>
        <errorMessage>Requested Due Date - External Delivery 2 must be  after Requested Due Date - External Delivery 1.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Hard_Due_Dates</fullName>
        <active>true</active>
        <description>You must have a due date and include the consequences if the due date is missed.</description>
        <errorConditionFormula>IF( 
 $CustomMetadata.CDT_Setting__mdt.Enhancement_Release.Allow_Validation__c,

AND(
(ISPICKVAL( External_Hard_Due_Date__c , &quot;Y&quot;)), 
 ( OR (
  ( ISBLANK( Due_Date__c ) ),
  ( ISBLANK( If_Due_Date_Missed__c ) )
)
)
),

False)</errorConditionFormula>
        <errorDisplayField>External_Hard_Due_Date__c</errorDisplayField>
        <errorMessage>You must have a due date and include the consequences if the due date is missed.</errorMessage>
    </validationRules>
</CustomObject>